Change Abbreviation -> alias in views

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -63,8 +63,8 @@
         <form id="urlForm" method="POST">
             <label for="urlInput">Enter URL:</label>
             <input type="text" id="urlInput" name="urlInput" required placeholder="http://this.is.way/too/long?isnt=it">
-            <label for="abbreviationInput">Enter Abbreviation:</label>
-            <input type="text" id="abbreviationInput" name="abbreviationInput" required placeholder="http://localhost:3000/......">
+            <label for="aliasInput">Enter alias:</label>
+            <input type="text" id="aliasInput" name="aliasInput" required placeholder="http://localhost:3000/......">
             <input type="submit" value="Shorten URL">
         </form>
     </div>
