make alias box is optional

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -64,7 +64,7 @@
             <label for="urlInput">Enter URL:</label>
             <input type="text" id="urlInput" name="urlInput" required placeholder="http://this.is.way/too/long?isnt=it">
             <label for="aliasInput">Enter alias:</label>
-            <input type="text" id="aliasInput" name="aliasInput" required placeholder="http://localhost:3000/......">
+            <input type="text" id="aliasInput" name="aliasInput"placeholder="http://localhost:3000/......">
             <input type="submit" value="Shorten URL">
         </form>
     </div>
