add http:// prefix to all alias urls

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -83,7 +83,7 @@
                 <% for(let u of urls) { %>
                     <tr>
                     <th><a href="<%= u.url %>"><%= u.url %></a></th>
-                    <th><a href="http://<%= u.alias %>"><%= u.alias %></a></th>
+                    <th><a href="<%= u.alias %>"><%= u.alias %></a></th>
                     </tr>
                     <% } %>
             </tr>
